--- a/index.html
+++ b/index.html
@@ -48,23 +48,23 @@ comments: false
             <p>
                 On Wednesday December 9th, 2016, Nana Akufu-Addo elections to be president of Ghana for his first term spanning four (4) years.
                 <br /><br />
-                He made <b>a lot of promises</b>. Trump Tracker will fact-check and see if he adheres to all of his stands on policies regarding culture, immigration, economy, and many more.
+                There were a lot of promises made on the campaign trail. Ghana Election Promises Tracker will fact-check and see if he adheres to all of his stands on policies regarding culture, immigration, economy, and many more.
             </p>
 
             <div>
                 <ul class="list-inline">
                     <li>
-                        <a href="http://www.facebook.com/sharer.php?u=https://ghelectionpromises.github.io/" target="_blank" style="color:#3b5998;">
+                        <a href="http://www.facebook.com/sharer.php?u=http://tracker.ghelectionpromises.com/" target="_blank" style="color:#3b5998;">
                             <i class="fa fa-2x fa-facebook-square"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/share?url=https://ghelectionpromises.github.io/" target="_blank" style="color:#dd4b39;">
+                        <a href="https://plus.google.com/share?url=http://tracker.ghelectionpromises.com/" target="_blank" style="color:#dd4b39;">
                             <i class="fa fa-2x fa-google-plus"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/share?url=https://ghelectionpromises.github.io/&amp;text=Track&nbsp;NPP&apos;s&nbsp;Election&nbsp;Promises&nbsp;with&nbsp;Gh&nbsp;Election&nbsp;Promises&nbsp;Tracker.&amp;hashtags=ghanadecides&amp;via=dotkwame" target="_blank" style="color:#1da1f2;">
+                        <a href="https://twitter.com/share?url=http://tracker.ghelectionpromises.com/&amp;text=Track&nbsp;NPP&apos;s&nbsp;Election&nbsp;Promises&nbsp;with&nbsp;Gh&nbsp;Election&nbsp;Promises&nbsp;Tracker.&amp;hashtags=ghanadecides" target="_blank" style="color:#1da1f2;">
                             <i class="fa fa-2x fa-twitter"></i>
                         </a>
                     </li>
@@ -130,7 +130,7 @@ comments: false
                                     {% capture message %}@NAkufoAddo{{ status }}promise no. {% increment issue_number %}: {{ point.text }} on{% endcapture %}{% capture tweettext%}{{ message }}{% endcapture %}
                                 {% if point.status %}
                                 <div class="text-center">
-                                <a href="https://twitter.com/share?url=https://ghelectionpromises.github.io/&text={{ tweettext | truncate: 102 | url_encode }}&hashtags=GhanaDecides" target="_blank">
+                                <a href="https://twitter.com/share?url=http://tracker.ghelectionpromises.com/&text={{ tweettext | truncate: 102 | url_encode }}&hashtags=GhanaDecides" target="_blank">
                                 <i class="fa fa fa-twitter"></i>
                                 </a>
                                 </div>
