--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ comments: false
                                 <div class="tweet">
                                 {% endif %}
                                     {% if point.comments %}
-                                        <a href="{{point.comments}}" target="_blank" rel="nofollow" class="btn btn-default btn-sm"><i class="fa fa-comments text-muted"></i>&nbsp;Comment</a>
+                                        <!--<a href="{{point.comments}}" target="_blank" rel="nofollow" class="btn btn-default btn-sm"><i class="fa fa-comments text-muted"></i>&nbsp;Comment</a>-->
                                     {% endif %}
                                 </div>
                                 </td>
