--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ comments: false
                                 </a>
                                 </div>
                                 <div class="text-center">
-                                <button type="button" class="btn btn-default btn-sm" onclick="sharetofb({{tweettext}})">facebook</button>
+                                <a href="#" target="_blank" onclick="sharetofb({{tweettext}})">
                                 <i class="fa fa fa-facebook"></i>
                                 </a>
                                 </div>
