--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@ comments: false
                                 </a>
                                 </div>
                                 <div class="text-center">
-                                <a href="#" target="_blank" onclick="sharetofb({{tweettext}})">
+                                <button class="btn btn-default btn-sm" target="_blank" onclick="sharetofb({{ tweettext }})">
                                 <i class="fa fa fa-facebook"></i>
-                                </a>
+                                </button>
                                 </div>
                                 <div class="tweet">
                                 {% endif %}
