--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ comments: false
                                 </a>
                                 </div>
                                 <div class="text-center">
-                                <button class="btn btn-default btn-sm" target="_blank" onclick="sharetofb({{ tweettext }})">
+                                <button class="btn btn-default btn-sm" target="_blank" onclick="sharetofb('{{ tweettext }}')">
                                 <i class="fa fa fa-facebook"></i>
                                 </button>
                                 </div>
