--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ comments: false
                                     {% capture message %}@NAkufoAddo{{ status }}promise no. {% increment issue_number %}: {{ point.text }} on{% endcapture %}{% capture tweettext%}{{ message }}{% endcapture %}
                                 {% if point.status %}
                                 <div class="text-center">
-                                <a href="https://twitter.com/share?url=http://tracker.ghelectionpromises.com/&text={{ tweettext | truncate: 102 | url_encode }}&hashtags=GhanaDecides" target="_blank">
+                                <a class="btn btn-default btn-sm" href="https://twitter.com/share?url=http://tracker.ghelectionpromises.com/&text={{ tweettext | truncate: 102 | url_encode }}&hashtags=GhanaDecides" target="_blank">
                                 <i class="fa fa fa-twitter"></i>
                                 </a>
                                 </div>
