--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@ comments: false
             <div>
                 <ul class="list-inline">
                     <li>
-                        <a href="http://www.facebook.com/sharer.php?u=http://tracker.ghelectionpromises.com/" target="_blank" style="color:#3b5998;">
+                        <a href="http://www.facebook.com/sharer.php?u=http://ghelectionpromises.com/" target="_blank" style="color:#3b5998;">
                             <i class="fa fa-2x fa-facebook-square"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/share?url=http://tracker.ghelectionpromises.com/" target="_blank" style="color:#dd4b39;">
+                        <a href="https://plus.google.com/share?url=http://ghelectionpromises.com/" target="_blank" style="color:#dd4b39;">
                             <i class="fa fa-2x fa-google-plus"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/share?url=http://tracker.ghelectionpromises.com/&amp;text=Track&nbsp;NPP&apos;s&nbsp;Election&nbsp;Promises&nbsp;with&nbsp;Gh&nbsp;Election&nbsp;Promises&nbsp;Tracker.&amp;hashtags=ghanadecides" target="_blank" style="color:#1da1f2;">
+                        <a href="https://twitter.com/share?url=http://ghelectionpromises.com/&amp;text=Track&nbsp;NPP&apos;s&nbsp;Election&nbsp;Promises&nbsp;with&nbsp;Gh&nbsp;Election&nbsp;Promises&nbsp;Tracker.&amp;hashtags=ghanadecides" target="_blank" style="color:#1da1f2;">
                             <i class="fa fa-2x fa-twitter"></i>
                         </a>
                     </li>
