--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ comments: false
                     </li>
                 </ul>
                 <p>
-                    On Wednesday December 9th, 2016, Nana Akufu-Addo elected to be president of Ghana for his first term spanning four (4) years.
+                    On Wednesday December 9th, 2016, Nana Akufu-Addo was elected to be president of Ghana for his first term spanning four (4) years.
                     <br /><br />
-                    There were a lot of promises made on the campaign trail. Ghana Election Promises Tracker will fact-check and see if he adheres to all of his promises made during the campagins an in his party's manifesto.
+                    There were a lot of promises made on the campaign trail. Ghana Election Promises Tracker will fact-check and record when he adheres to all of the promises made during the campaign and in his party's manifesto.
                 </p>
 
                 <div>
