--- a/index.html
+++ b/index.html
@@ -45,7 +45,17 @@ comments: false
                         Broken: <span id="points-broken"></span> of <span class="total-points"></span>
                     </li>
                 </ul>
-                <p>
+              
+
+            </div>
+            <div class="col-md-6">
+                <img src="assets/npp_img.jpg" class="img-responsive center-block" alt="NPP Election Poster." />
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <p>
                     On Wednesday December 9th, 2016, Nana Akufu-Addo was elected to be president of Ghana for his first term spanning four (4) years.
                     <br /><br />
                     There were a lot of promises made on the campaign trail. Ghana Election Promises Tracker will fact-check and record when he adheres to any of the promises made during the campaign and in his party's manifesto.
@@ -70,11 +80,6 @@ comments: false
                         </li>
                     </ul>
                 </div>
-
-            </div>
-            <div class="col-md-6">
-                <img src="assets/npp_img.jpg" class="img-responsive center-block" alt="NPP Election Poster." />
-            </div>
         </div>
     </div>
     <br />
