--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@ comments: false
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
+            <div class="col-md-8">
             <p>
                     On Wednesday December 9th, 2016, Nana Akufu-Addo was elected to be president of Ghana for his first term spanning four (4) years.
                     <br /><br />
@@ -79,6 +80,7 @@ comments: false
                             </a>
                         </li>
                     </ul>
+                </div>
                 </div>
         </div>
     </div>
