--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ comments: false
                                     {% capture message %}@NAkufoAddo has promised to: {{ point.text }} on{% endcapture %}{% capture tweettext%}{{ message }}{% endcapture %}
                                     {% if point.status %}
                                     <div class="text-center">
-                                        <a class="btn btn-default btn-sm" href="https://twitter.com/share?url=http://tracker.ghelectionpromises.com/&text={{ tweettext | truncate: 102 | url_encode }}&hashtags=GhanaDecides" target="_blank">
+                                        <a class="btn btn-default btn-sm" href="https://twitter.com/share?url=http://ghelectionpromises.com/tracker&text={{ tweettext | truncate: 96 | url_encode }}&hashtags=GhElectionPromises" target="_blank">
                                             <i class="fa fa fa-twitter"></i>
                                         </a>
                                     </div>
