--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ comments: false
                                 <td class="tweet">
                                     {% capture status %}{% if point.status == "notStarted" %} hasn't started {%elsif point.status == "broken" %} broke {% elsif point.status == "achieved" %} achieved {% else %}{% endif %}{% endcapture %}
 
-                                    {% capture message %}@NAkufoAddo has promised to: {{ point.text }} on{% endcapture %}{% capture tweettext%}{{ message }}{% endcapture %}
+                                    {% capture message %}@NAkufoAddo has promised: {{ point.text }} on{% endcapture %}{% capture tweettext%}{{ message }}{% endcapture %}
                                     {% if point.status %}
                                     <div class="text-center">
                                         <a class="btn btn-default btn-sm" href="https://twitter.com/share?url=http://ghelectionpromises.com/tracker&text={{ tweettext | truncate: 96 | url_encode }}&hashtags=GhElectionPromises" target="_blank">
