--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ comments: false
 
             </div>
             <div class="col-md-5">
-                <img src="assets/npp_img.jpg" class="img-responsive center-block" alt="NPP Election Poster." />
+                <!--img src="assets/npp_img.jpg" class="img-responsive center-block" alt="NPP Election Poster." /-->
             </div>
         </div>
     </div>
